--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "generator-react-mobx-webpack-boilerplate",
-  "version": "1.0.4",
-  "description": "React-Mobx-Webpack-Boilerplate",
+  "name": "generator-react-mobx-boilerplate",
+  "version": "1.0.5",
+  "description": "React-Mobx-Boilerplate",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
