--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-react-mobx-boilerplate",
-  "version": "1.0.9",
+  "version": "1.0.10",
   "description": "React-Mobx-Boilerplate",
   "main": "index.js",
   "scripts": {
@@ -18,10 +18,9 @@
   ],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/jason5149/react-mobx-webpack-boilerplate/issues"
+  "engines": {
+    "node": ">=8.4"
   },
-  "homepage": "https://github.com/jason5149/react-mobx-webpack-boilerplate#readme",
   "dependencies": {
     "chalk": "^2.4.2",
     "yeoman-generator": "^4.0.0"
