--- a/app/package.json
+++ b/app/package.json
@@ -28,6 +28,7 @@
     "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.6",
     "babel-plugin-import": "^1.11.2",
     "babel-plugin-lodash": "^3.3.4",
@@ -35,6 +36,10 @@
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.1",
     "es6-promise": "^4.2.6",
+    "eslint": "^5.16.0",
+    "eslint-loader": "^2.1.2",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.13.0",
     "file-loader": "^3.0.1",
     "happypack": "^5.0.1",
     "html-webpack-plugin": "^3.2.0",
