--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "{{appName}}",
+  "name": "appName",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -37,9 +37,17 @@
     "css-loader": "^2.1.1",
     "es6-promise": "^4.2.6",
     "eslint": "^5.16.0",
+    "eslint-config-prettier": "^4.3.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-config-standard-react": "^7.0.2",
     "eslint-loader": "^2.1.2",
+    "eslint-plugin-compat": "^3.1.1",
+    "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-react": "^7.13.0",
+    "eslint-plugin-standard": "^4.0.0",
     "file-loader": "^3.0.1",
     "happypack": "^5.0.1",
     "html-webpack-plugin": "^3.2.0",
